fix: car not showing

--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -26,8 +26,8 @@
 }
 
 model-viewer {
-    width: 50%;
-    height: 100%;
+    width: 50vw;
+    height: 100vh;
 
     display: flex;
     justify-content: center;
