--- a/assets/css/pages/our-journey.css
+++ b/assets/css/pages/our-journey.css
@@ -7,6 +7,10 @@
     min-height: 500px;
 }
 
+#title-section h1 {
+    color: white;
+}
+
 /* our-cars */
 
 #our-cars .car-banner {
